minidlnadir=.
minidlna_PROGRAMS=minidlna
minidlna_SOURCES=minidlna.c upnphttp.c upnpdescgen.c upnpsoap.c \
           upnpreplyparse.c minixml.c \
           getifaddr.c daemonize.c upnpglobalvars.c \
           options.c minissdp.c uuid.c upnpevents.c \
           sql.c utils.c metadata.c scanner.c inotify.c \
           tivo_utils.c tivo_beacon.c tivo_commands.c \
           tagutils/textutils.c tagutils/misc.c tagutils/tagutils.c \
           image_utils.c albumart.c playlist.c log.c

